tests/neg-custom-args/captures/lazyvals3.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/lazyvals3.scala:29:10 ----------------------------------
29 |          ev1(n - 1) // error
   |          ^^^
   |          References {c, console} are not all included in the allowed capture set {ev1, console}
   |          of an enclosing function literal with expected type Int ->{ev1, console} Boolean.
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/lazyvals3.scala:34:8 -----------------------------------
34 |        od1(n - 1) // error
   |        ^^^
   |        References {console, c, ev1, io} are not all included in the allowed capture set {io, console}
   |        of an enclosing function literal with expected type Int ->{io, console} Boolean.
